feat: ajusta estilos y clases en componentes de carrusel, áreas comunes, galería, héroe y bienvenida

--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -52,7 +52,7 @@ const title = titleProp.toLowerCase().replace(/\s+/g, '-')
         <Image
           src={src as string}
           alt={alt}
-          class='min-w-full min-h-full object-cover'
+          class='min-w-full object-cover'
           width={1920}
           height={1080}
         />
