--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,7 +8,12 @@ import { imagesHero } from '@/consts/images'
 
 <section class='relative h-screen'>
   <LanguagePicker />
-  <Carousel images={imagesHero} title='Hero' autoPlay />
+  <Carousel
+    classWrapper='[&>img]:!min-h-full'
+    images={imagesHero}
+    title='Hero'
+    autoPlay
+  />
 
   <header
     class='absolute top-0 flex flex-col items-center justify-center text-white w-full py-8'
